# agent_langchain

./: .env.example  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
app/: __init__.py  api.py  config.py  main.py  rag.py
app/core/: config.py
app/llm/: __init__.py  model.py  providers.py
app/rag/: pipeline.py  prompts.py
docs/: chuleta_exposicion.md  guia_codigo.md  guion_exposicion.md
